# LeitorExibidor

./: .gitignore  CMakeLists.txt  CppCheckResults.xml  Hello.java  Hello.txt  HelloWorldApp.txt  LeitorExibidor.cbp  LeitorExibidor.depend  LeitorExibidor.dev  LeitorExibidor.layout  Makefile.win  carrega.c  carrega.h  carregamento.c  carregamento.h  imprime.c  imprime.h  leia-me.txt  lista_arrays_objetos_classes.c  lista_arrays_objetos_classes.h  main.c  main.h  mapa.txt  pilha_frames.c  pilha_frames.h  pilha_operandos.c  pilha_operandos.h  relatorio.txt  testeArray.txt  testeLogArit.txt
.cccc/: anonymous.html  anonymous.xml  cccc.db  cccc.html  cccc.xml  cccc_src.html
AreaMetodos/: area_metodos.c  area_metodos.h
ClassLoader/: carregamento.c  carregamento.h  classloader.c  classloader.h  impressao.c  impressao.h
Heap/: heap.c  heap.h  lista_arrays_objetos_classes.h
Instrucoes/: bridge_arquivosinstrucoes.h  cast.c  cast.h  comparacao.c  comparacao.h  const.c  const.h  exec_instrucoes.c  exec_instrucoes.h  ifs.c  ifs.h  load.c  load.h  logico_aritimeticas.c  logico_aritimeticas.h  others.c  others.h  others.h.cbTemp  pop_dup_swap.c  pop_dup_swap.h  store.c  store.h
Pilha/: pilha_frames.c  pilha_frames.h  pilha_operandos.c  pilha_operandos.h
Testes/: LogArIfs.java
doxygen/: doxyfile
doxygen/html/: _hello_8java.html  annotated.html  annotated.js  area__metodos_8c.html  area__metodos_8c.js  area__metodos_8h.html  area__metodos_8h_source.html  bridge__arquivosinstrucoes_8h.html  bridge__arquivosinstrucoes_8h_source.html  carregamento_8c.html  carregamento_8c.js  (+187 more)
(+55 files in other folders)
